tests/correctness/resources/miniboxing/tests/compile/SI-4012-2.check
newSource1.scala:6: error: Using named super is not supported in miniboxed classes. For a workaround, please see https://github.com/miniboxing/miniboxing-plugin/issues/166:
  super[Super].superb // okay
               ^
